2003-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-half-space, w3m-tab-separator): Use `:width'
	instead of `:relative-width' to specify the space width.
	(w3m-tab-line): Tidy it up.

	* w3m-favicon.el (w3m-favicon-set-image): Use `:width' instead of
	`:relative-width' to specify the space width.

2003-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (w3m-tab-unselected-face,
	w3m-tab-unselected-retrieving-face, w3m-tab-selected-face,
	w3m-tab-selected-face): Exchange the default TTY colors between
	selected faces and unselected faces.
	(w3m-tab-drag-mouse-function): Compare buffer objects instead of
	buffer names.
	(w3m-tab-make-keymap): Use buffer objects instead of buffer names.
	(w3m-tab-line): Make all tab widths the same even if there are
	wide characters; never use graphic icons in TTY; close the left
	margin unless there's an icon; add a keymap to favicon; don't put
	mouse-face on icons.
	(w3m-initialize-graphic-icons): Don't make graphic icons for TTY;
	don't put mouse-face on icons.

	* w3m-favicon.el: Bind `w3m-modeline-favicon' when compiling.
	(w3m-favicon-set-image): Add a half space after favicon.

	* w3m-util.el (w3m-current-title): New function.
	(w3m-buffer-title): Use it.

	* w3m.el: Silence the byte-compiler for `w3m-info-like-map',
	`w3m-lynx-like-map', `w3m-minor-mode-map', `w3m-mode-map', and
	`w3m-setup-menu'.

2003-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el: Silence the compile warning for `w3m-message'.

	* w3m.el (w3m-url-to-file-name): Enable it to interpret
	file://localhost/ urls.

2003-10-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-parse-and-fontify): Fix for textarea on w3mmee.

2003-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el (frame-current-scroll-bars): Alias to `ignore' if it
	is not available.
	(window-fringes): Ditto.
	(w3m-tab-width): Protect against setting illegal values.
	(w3m-tab-unselected-face): Don't specify the underline color.